--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
-
+<html>
+<head>
+<meta charset="utf-8" /> 
+</head>
+<body>
+	
 <style>
 .main
 	{
@@ -35,6 +40,7 @@ li span {
 }
 
 ul {
+	    display: table-row;
   list-style-type: none;
 }
 </style>
@@ -49,6 +55,7 @@ ul {
 <li>{{ name }} <span>{{degarr[name]}}%</span></li>
 {% endfor %}
 </ul>
+<br><br>
 <div>
 {{ final_words }}
 </div>
@@ -56,3 +63,6 @@ ul {
 <img src="../timeseries_rap.png" width="100%" />
 
 </div>
+
+</body>
+</html>
